--- a/index.html
+++ b/index.html
@@ -85,6 +85,60 @@
               <div class="text-stone-50 mx-auto text-xl text-center px-10 lg:px-40">
                 <div class="text-sm font-thin mt-4">
                   <div class="font-thin text-sm" id="stacks_project">
+                    <video class="h-44 w-full object-cover hover:scale-110 transition-all duration-200 cursor-pointer"  controls alt="">
+                      <source src="./videos/chase2d.mp4" type="video/mp4"/>
+                    </video>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <h1 class="mb-2 font-thin text-3xl">
+                      Chase2D
+                      <i class="fa-brands fa-swift"></i>
+                    </h1>
+                    <span><a href="https://github.com/hyungwlee/Chase2D" target="_blank" rel="noopener noreferrer">  Chase 2D </a> </span> was an iOS game project I worked on for <span><a href="https://www.howyoufeel.io/">HYEL</a></span> where
+                    we worked for over 3 months to create a car chase game for their iOS app. It was a great opportunity to learn swift programming
+                    and hone my software development skills in the real world. 
+                  </div>
+               </div>
+              </div>
+              <div class="text-stone-50 mx-auto text-xl text-center px-10 lg:px-40">
+                <div class="text-sm font-thin mt-4">
+                  <div class="font-thin text-sm" id="stacks_project">
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/QH-dXDbthcM?si=bsDhj2NTSaOoHCBL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  </div>
+                  <div class="p-4">
+                    <h1 class="mb-2 font-thin text-3xl">
+                      FoooTrition
+                      <i class="fa-brands fa-js"></i>
+                    </h1>
+                    <span>
+                      <a href="https://github.com/rosnMagar/FoooTrition" target="_blank" rel="noopener noreferrer" >FoooTrition</a>
+                    </span> it provides you meal plans or nutrition information based on the information that you gave to FoooTrition. For example, if you say your sex, weight, any disabilities you have, or health concerns, FoooTrition will give the best suggestions for you.">FoooTrition </spans> provides you meal plans or nutrition information based on the information that you gave to FoooTrition. For example, if you say your sex, weight, any disabilities you have, or health concerns, FoooTrition will give the best suggestions for you.
+                  </div>
+               </div>
+              </div>
+              <div class="text-stone-50 mx-auto text-xl text-center px-10 lg:px-40">
+                <div class="text-sm font-thin mt-4">
+                  <div class="font-thin text-sm" id="stacks_project">
+                    <video class="h-44 w-full object-cover hover:scale-110 transition-all duration-200 cursor-pointer"  controls alt="">
+                      <source src="./videos/research.mp4" type="video/mp4"/>
+                    </video>
+                  </div>
+                  <div class="p-4">
+                    <h1 class="mb-2 font-thin text-3xl">
+                      Real-time Gun Detection using YOLO: A Deep Learning Approach for Public Safety
+                      <i class="fa-brands fa-python"></i>
+                    </h1>
+                    Conducted a research titled, "Real-time Gun Detection using YOLO: A Deep Learning Approach for Public Safety" with the supervision of 
+                    Dr. Nazmul Shahadat from the department of Computer Science at Truman State University. Published for the 
+                    <span><a href="https://iccit.org.bd/2024/" target="_blank" rel="noopener noreferrer">27th ICCIT Research Conference 2024</a></span>
+                  </div>
+               </div>
+              </div>
+
+              <div class="text-stone-50 mx-auto text-xl text-center px-10 lg:px-40">
+                <div class="text-sm font-thin mt-4">
+                  <div class="font-thin text-sm" id="stacks_project">
                     <!-- TODO Add Github Repo -->
                     <a href="#" target="_blank" rel="noopener noreferrer" >
                       <img src="./photos/summer24Research.png" class="h-44 w-full object-cover hover:scale-110 transition-all duration-200 cursor-pointer" alt=""/>
