--- a/secret_project.html
+++ b/secret_project.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roshan's Portfolio</title>
-    <script type="module" crossorigin src="/assets/admin-BVtbuhbj.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/style-DqUgtYR7.js">
-    <link rel="stylesheet" crossorigin href="/assets/style-Dcj8JhUR.css">
+    <script type="module" crossorigin src="/personal/assets/admin-BVtbuhbj.js"></script>
+    <link rel="modulepreload" crossorigin href="/personal/assets/style-DqUgtYR7.js">
+    <link rel="stylesheet" crossorigin href="/personal/assets/style-Dcj8JhUR.css">
   </head>
   <body class="bg-black relative">
     <div class="stars star1"></div>
@@ -31,6 +32,7 @@
           </div>
         
       </div>
-   </div>
+   </div>
+
   </body>
 </html>
