Secret fix added meta

--- a/secret_project.html
+++ b/secret_project.html
@@ -6,6 +6,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roshan's Portfolio</title>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rosnmagar.github.io/personal/">
+    <meta property="og:site_name" content="Roshan's Portfolio">
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="./favicon.png">
+    <meta name="description" content="This is my portfolio website where I share about me and my projects">
     <script type="module" crossorigin src="/personal/assets/admin-BVtbuhbj.js"></script>
     <link rel="modulepreload" crossorigin href="/personal/assets/style-DqUgtYR7.js">
     <link rel="stylesheet" crossorigin href="/personal/assets/style-Dcj8JhUR.css">
