--- a/secret_project.html
+++ b/secret_project.html
@@ -2,18 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roshan's Portfolio</title>
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rosnmagar.github.io/personal/">
-    <meta property="og:site_name" content="Roshan's Portfolio">
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="./favicon.png">
-    <meta name="description" content="This is my portfolio website where I share about me and my projects">
-    <script type="module" crossorigin src="/personal/assets/admin-BVtbuhbj.js"></script>
-    <link rel="modulepreload" crossorigin href="/personal/assets/style-DqUgtYR7.js">
-    <link rel="stylesheet" crossorigin href="/personal/assets/style-Dcj8JhUR.css">
+    <script type="module" crossorigin src="/assets/admin-3xY3Zlk4.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/style-DqUgtYR7.js">
+    <link rel="stylesheet" crossorigin href="/assets/style-Dcj8JhUR.css">
   </head>
   <body class="bg-black relative">
     <div class="stars star1"></div>
@@ -37,7 +31,6 @@
           </div>
         
       </div>
-   </div>
-
+   </div>
   </body>
 </html>
